--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,14 +1,19 @@
-# Command to start on workspace startup (optional)
-tasks:
-  - before: nvm install 16
-    init: npm install;
-    command: npm run start;
-# Ports to expose on workspace startup (optional)
+image:
+  file: .gitpod.Dockerfile
+
 ports:
-  - port: 3000
-    onOpen: open-preview
-    visibility: public
+    - port: 3000
+      onOpen: ignore
 
 vscode:
   extensions:
-    - esbenp.prettier-vscode
+    - learn-pack.learnpack-vscode
+
+github:
+    prebuilds:
+        # enable for the master/default branch (defaults to true)
+        master: true
+        # enable for pull requests coming from this repo (defaults to true)
+        pullRequests: false
+        # add a "Review in Gitpod" button as a comment to pull requests (defaults to true)
+        addComment: false
